width overflow fix & high width image load fix on mobile

--- a/src/app/core/shell/shell.component.scss
+++ b/src/app/core/shell/shell.component.scss
@@ -14,6 +14,7 @@
 .scroll-wrapper {
     min-height: calc(100vh - 64px);
     padding: 16px;
+    overflow-x: hidden;
     box-sizing: border-box;
 }
 
